add linux/osx ci fix tests error
Signed-off-by: nivalxer <nivalxer@gmail.com>

--- a/.github/workflows/build-osx.yml
+++ b/.github/workflows/build-osx.yml
@@ -1,10 +1,10 @@
-name: Build Windows
+name: Build OSX
 on: [push, pull_request]
 env:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: macOS-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -25,7 +25,3 @@ jobs:
       
     - name: Run Tests
       run: dotnet test --configuration Release --no-build AspectCore-Framework.sln
-      
-    - name: Package
-      if: github.event_name != 'pull_request'
-      run: dotnet pack --configuration Release --no-build AspectCore-Framework.sln
