--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,10 +1,10 @@
-name: Build Windows
+name: Build Linux
 on: [push, pull_request]
 env:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -26,6 +26,3 @@ jobs:
     - name: Run Tests
       run: dotnet test --configuration Release --no-build AspectCore-Framework.sln
       
-    - name: Package
-      if: github.event_name != 'pull_request'
-      run: dotnet pack --configuration Release --no-build AspectCore-Framework.sln
